# Brain-image-compression

./: CMakeLists.txt  CMakeUserPresets.json  README.md
include/: NiftiMetadata.h  Nifti_function.h  process_function.h  x265Encoder.h
include_ui/: mainwindow.h  streambuffer.h  worker.h  worker_compress.h
resources/: temp.h265  ui.qrc
src/: NiftiMetadata.cpp  RDplot.cpp  compressNifti.cpp  ffmpegCommand.cpp  getH265Info.cpp  h265tonii.cpp  hevctonii.cpp  jp3d.cpp  main.cpp  main_ui.cpp  mainwindow.cpp  printnii.cpp  psnr.cpp  readtxt.cpp  showNift.cpp  slicetoyuv.cpp  ssim.cpp  streambuffer.cpp  test.cpp  worker.cpp  x265Encoder.cpp  yuvtoh265.cpp  yuvtohevc.cpp
ui/: mainwindow.ui
